# ascii_paint_to_image

./: .gitignore  README.md  pyproject.toml
docs/: controlnet_direction_failure.html
src/ascii_paint_to_image/: __main__.py  analysis.py  app.py  controlnet.py  history.py  image_input.py  outline.py  prompt_cli.py  report.py  runs.py  runtime.py  sgr_mouse.py  surface.py
tests/: test_analysis.py  test_app.py  test_controlnet.py  test_history.py  test_image_input.py  test_outline.py  test_prompt_cli.py  test_report.py  test_runs.py  test_surface.py
